--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
+    "http": "^0.0.1-security",
     "mysql2": "^3.11.0",
-    "path": "^0.12.7"
+    "nodemailer": "^6.9.14",
+    "path": "^0.12.7",
+    "querystring": "^0.2.1"
   }
 }
