--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http": "^0.0.1-security",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
     "path": "^0.12.7",
     "querystring": "^0.2.1"
   }
